[project]
name = "cruise_planner"
version = "0.1.0"
description = "cruise_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "litellm>=1.83.0",
]

[project.scripts]
cruise_planner = "cruise_planner.main:run"
run_crew = "cruise_planner.main:run"
train = "cruise_planner.main:train"
replay = "cruise_planner.main:replay"
test = "cruise_planner.main:test"
run_with_trigger = "cruise_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
